--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
- "name":"af-node-base",
-  "version":"0.0.1",
-  "dependencies":{
-      "express":"",
-      "readymade":"",
-      "jade":""
+  "name": "af-node-base",
+  "version": "0.0.1",
+  "dependencies": {
+    "express": "",
+    "jade": ""
+  },
+  "devDependencies": {
+    "grunt": "~0.4.0",
+    "grunt-contrib-jshint": "~0.1.0",
+    "grunt-contrib-compass": "~0.1.0",
+    "grunt-contrib-watch": "~0.1.4"
   }
 }
