--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt": "~0.4.0",
     "grunt-contrib-jshint": "~0.1.0",
     "grunt-contrib-compass": "~0.1.0",
-    "grunt-contrib-watch": "~0.1.4"
+    "grunt-contrib-watch": "~0.1.4",
+    "grunt-bower-task": "~0.1.0"
   }
 }
