--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "grunt-contrib-compass": "~0.1.0",
     "grunt-contrib-watch": "~0.1.4",
     "grunt-bower-task": "~0.1.0",
-    "grunt-contrib-requirejs": "~0.3.4"
+    "grunt-contrib-requirejs": "~0.3.4",
+    "grunt-contrib-mincss": "~0.3.2",
+    "grunt-contrib-uglify": "~0.1.0"
   }
 }
