--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "af-node-base",
   "version": "0.0.1",
+  "scripts": {
+    "start": "node app"
+  },
   "dependencies": {
     "express": "",
     "jade": ""
@@ -14,5 +17,9 @@
     "grunt-contrib-requirejs": "~0.3.4",
     "grunt-contrib-uglify": "~0.1.0",
     "grunt-contrib-cssmin": "~0.4.2"
+  },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.2.x"
   }
 }
